--- a/frontend/src/components/promptform.css
+++ b/frontend/src/components/promptform.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 5% 0 5% 0;
+    margin-bottom: 50px;
 }
 
 .promptform-box {
@@ -127,7 +127,7 @@ button:hover {
 /* ---------DESKTOP VIEW---------- */
 @media (min-width: 1025px) {
     .promptform-box {
-        margin: 50px 0;
+   margin-bottom: 70px; 
     }
 
     .textareas-container {
